# macs_processing

./: .gitignore  01_SetupData.py  02_Postprocessing.py  03_MoveProducts.py  04_ArchiveData.py  04_ArchiveData_v2.py  05_Pull_Backup.py  06_RenameProject.py  07_Clip_PointClouds_from_Archive.py  08_Create_Product_Report.ipynb  08_Create_Product_Report.py  10_PostprocessingWrapper.py  11_Postprocessing_clip_PC.py  CHANGELOG.md  CITATION.cff  Create_Product_Report.ipynb  MACS_00_Settings.py  README.md  Transform_vrt_win2linux.ipynb  batch_ClipPointClouds.ipynb  create_vrt.py  pix4dnav.py  postprocessing_wrapper_config.yaml  processing_config_template.yaml  processing_utils.py  pull_pix4dproject_from_archive.ipynb  pyproject.toml  requirements.txt  setup.py  spec_file.txt  utils_postprocessing.py  utils_report.py  utils_wbt.py  whitebox_lastodsm-pipeline.ipynb
.github/workflows/: update_version.yml
conda/: environment.yml
macs_processing/: 01_SetupData.py  02_Postprocessing.py  06_RenameProject.py  utils_postprocessing.py  utils_wbt.py
mipps_scripts/: 33552_all_taps_2018-09-26_12-58-15_modelbased.mipps  33576_all_taps_2018-09-26_13-13-43_modelbased.mipps  33577_all_taps_2018-09-26_13-21-24_modelbased.mipps
mipps_scripts/111498/: 111498_per_pixel.mipps
mipps_scripts/121502/: 121502_per_pixel.mipps
mipps_scripts/99683/: 99683_per_pixel.mipps
notebooks/: 09_Prepare_AOI_file.ipynb  pull_pix4dproject_from_archive.ipynb  rename_project_recursively.ipynb
pix4D_cameras/: pix4D-kameradatenbank_MACS-Polar1-2023.xml  pix4D-kameradatenbank_MACS-Polar1-2024.xml  pix4D-kameradatenbank_MACS-Polar18.xml
pix4D_processing_templates/: MACS_10cm_batch.tmpl  MACS_10cm_batch_v2.tmpl  MACS_20cm_batch.tmpl  MACS_20cm_batch_v2.tmpl  MACS_7cm_batch.tmpl  MACS_7cm_batch_v2.tmpl  MACS_Batch_v3_10cm.tmpl  MACS_Batch_v3_20cm.tmpl  MACS_Batch_v3_7cm.tmpl  MACS_Batch_v4_10cm.tmpl  MACS_Batch_v5_07cm.tmpl  MACS_Batch_v5_10cm.tmpl  MACS_Batch_v5_15cm.tmpl  MACS_Batch_v5_20cm.tmpl  MACS_batch_v01_2022.tmpl  p4d_template.p4d  pix4d_CameraDef_MACS_Polar18.xml
qgis_models/: split_aoi.model3
settings_templates/: MACS_Settings_template_v2_2024.py  WC_Settings_template_WC2023.py
src/macs_processing/: __init__.py
src/macs_processing/scripts/: clip_pointclouds_from_archive.py  create_product_report.py  macs_archive_data.py  macs_setup_data.py  macs_setup_pix4d.py  move_products.py  postprocessing.py  postprocessing_clip_pc.py  postprocessing_wrapper.py  processing_wrapper.py  run_pix4d.py
tools/: combine_RTK.py  create_COG_files.bat
(+7 files in other folders)
