[project]
name = "macs-processing"
version = "0.11.0"
description = "Package for pre and postprocessing of DLR MACS Imagery"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ingmar Nitze", email = "ingmar.nitze@awi.de" }]
keywords = ["macs", "imagery", "processing"]
dependencies = [
    "pandas",
    "geopandas",
    "rasterio",
    "tqdm",
    "laspy",
    "whitebox",
    "fiona",
    "pillow>10.2",
    "joblib",
    "scikit-learn",
    "scikit-image",
]
requires-python = ">=3.10, <3.11"  # Specify exact Python version

[project.urls]
homepage = "https://github.com/awi-response/macs_processing/"

[project.scripts]
01_SetupData = "macs_processing.scripts.macs_setup_data:main"
02_Postprocessing = "macs_processing.scripts.postprocessing:main"
03_MoveProducts = "macs_processing.scripts.move_products:main"
04_ArchiveData = "macs_processing.scripts.macs_archive_data:main"
05_PullBackup = "macs_processing.scripts.pull_backup:main"
06_RenameProject = "macs_processing.scripts.rename_project:main"
07_Clip_PointClouds_from_Archive = "macs_processing.scripts.clip_pointclouds_from_archive:main"
08_Create_Products_Report = "macs_processing.scripts.create_product_report:main"
11_Postprocessing_clip_PC = "macs_processing.scripts.postprocessing_clip_pc:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
